<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/primary_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_one"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor= "@color/secondary_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_two"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/secondary_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/splash_three"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/secondary_color" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_gravity="center_horizontal"
        android:rating="0"
        android:numStars="5"
        android:nestedScrollingEnabled="false" />
</LinearLayout>